--- a/web/src/main/webapp/app/components/harvester/partial/manageView.html
+++ b/web/src/main/webapp/app/components/harvester/partial/manageView.html
@@ -317,6 +317,15 @@
                     <span data-translate="">restartEtfMissing</span>
                   </a>
                 </li>
+                <li>
+                  <a role="button"
+                     data-ng-click="serviceLinker(h, false)"
+                     data-ng-show="statsForScope[h.uuid].count > 0"
+                     title="{{'restartServiceLinker' | translate}}">
+                    <i class="fa fa-fw"></i>&nbsp;
+                    <span data-translate="">restartServiceLinker</span>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
