--- a/web/src/main/webapp/app/components/home/homeView.html
+++ b/web/src/main/webapp/app/components/home/homeView.html
@@ -24,7 +24,7 @@
   <div class="col-sm-4">
 
     <div class="jumbotron">
-      <p>{{'homeInfo' | translate}}</p>
+      <p data-translate="">homeInfo</p>
     </div>
 
 
